// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > works as controlled 1`] = `
<button
  aria-controls=":r2:"
  aria-expanded="true"
  aria-haspopup="menu"
  class=" _root_6c3f4f  _root_2a1efe _--color-neutral_2a1efe _--variant-solid_2a1efe  _--size-medium_2a1efe"
  type="button"
>
  <span
    class="_text_2a1efe"
  >
    Open
  </span>
</button>
`;

exports[`DropdownMenu > works as uncontrolled 1`] = `
<button
  aria-controls=":r4:"
  aria-expanded="true"
  aria-haspopup="menu"
  class=" _root_6c3f4f  _root_2a1efe _--color-neutral_2a1efe _--variant-solid_2a1efe  _--size-medium_2a1efe"
  type="button"
>
  <span
    class="_text_2a1efe"
  >
    Open
  </span>
</button>
`;

exports[`DropdownMenu > works when opening and closing 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  class=" _root_6c3f4f  _root_2a1efe _--color-neutral_2a1efe _--variant-solid_2a1efe  _--size-medium_2a1efe"
  type="button"
>
  <span
    class="_text_2a1efe"
  >
    Open
  </span>
</button>
`;

exports[`DropdownMenu > works when opening and closing 2`] = `
<button
  aria-controls=":r0:"
  aria-expanded="true"
  aria-haspopup="menu"
  class=" _root_6c3f4f  _root_2a1efe _--color-neutral_2a1efe _--variant-solid_2a1efe  _--size-medium_2a1efe"
  type="button"
>
  <span
    class="_text_2a1efe"
  >
    Open
  </span>
</button>
`;
